--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -17,10 +17,10 @@
                 Clothing
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Accessories</a>
-                <a href="" class="dropdown-item">Suits</a>
-                <a href="" class="dropdown-item">Shirts</a>
-                <a href="" class="dropdown-item">All Clothing</a>
+                <a href="{% url 'products' %}?category=accessories" class="dropdown-item">Accessories</a>
+                <a href="{% url 'products' %}?category=suits" class="dropdown-item">Suits</a>
+                <a href="{% url 'products' %}?category=shirts" class="dropdown-item">Shirts</a>
+                <a href="{% url 'products' %}?category=accessories,suits,shirts" class="dropdown-item">All Clothing</a>
             </div>
         </li>
 
