--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -24,6 +24,100 @@
         <div class="col">
             {% if bag_items %}
                 <div class="table-responsive rounded"></div>
+                    <table class="table table-sm table-borderless">
+                        <thead class="text-black">
+                            <tr>
+                                <th scope="col">Product:</th>
+                                <th scope="col"></th>
+                                <th class="d-none d-sm-block" scope="col">Price:</th>
+                                <th scope="col">Oty:</th>
+                                <th scope="col">Subtotal:</th> 
+                            </tr>
+                        </thead>
+
+                        {% for item in bag_items %}
+                            <tr>
+                                <td class="p-3 w-25">
+                                    <img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="">
+                                </td>
+                                <td class="py-3">
+                                    <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                    {% if item.product.availability == True %}
+                                        <p class="font-small"><span class="in-stock"><i class="fas fa-dot-circle"></i> In Stock </span>|<span class="product-shipping"> Standard shipping 3-5 days</span></p>
+                                    {% else %}
+                                        <p class="font-small"><span class="out-stock"><i class="far fa-dot-circle"></i> Out of Stock </span>|<span class="product-shipping"> Ships in 1-2 weeks</span></p>
+                                    {% endif %}
+                                    <p class="my-0 small text-muted">ID: {{ item.product.product_id }}</p>
+                                </td>
+                                <td class="py-3 d-none d-sm-block">
+                                    <p class="my-0">€{{ item.product.price }}</p>
+                                </td>
+                                <td class="py-3">
+                                    <form class="form update-form" method="POST" action="{% url 'edit_bag' item.item_id %}">
+                                        {% csrf_token %}
+                                        <div class="form-group">
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <button class="decrement-qty btn btn-sm btn-black rounded-0" 
+                                                        data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                                        <span>
+                                                            <i class="fas fa-minus fa-sm"></i>
+                                                        </span>
+                                                    </button>
+                                                </div>
+                                                <input class="form-control form-control-sm qty_input" type="number"
+                                                    name="quantity" value="{{ item.quantity }}" min="1" max="5"
+                                                    data-item_id="{{ item.item_id }}"
+                                                    id="id_qty_{{ item.item_id }}">
+                                                <div class="input-group-append">
+                                                    <button class="increment-qty btn btn-sm btn-black rounded-0"
+                                                        data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                                        <span>
+                                                            <i class="fas fa-plus fa-sm"></i>
+                                                        </span>
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </form>
+                                    <a class="update-link text-info no-text-dec"><small>Update</small></a>
+                                    <a class="remove-item text-danger float-right no-text-dec" id="remove_{{ item.item_id }}" data-size="{{ item.size }}"><small>Remove</small></a>
+                                </td>
+                                <td class="py-3">
+                                    <p class="my-0">€{{ item.product.price | calc_subtotal:item.quantity }}</p>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        <tr>
+                            <td colspan="5" class="pt-5 text-right">
+                                <h6><strong>Bag Total: €{{ total|floatformat:2 }}</strong></h6>
+                                <h6>Delivery: €{{ delivery|floatformat:2 }}</h6>
+                                <h4 class="mt-4"><strong>Grand Total: €{{ grand_total|floatformat:2 }}</strong></h4>
+                                {% if free_delivery_delta > 0 %}
+                                    <p class="mb-1">
+                                        You could get free delivery by spending just <strong>€{{ free_delivery_delta }}</strong> more!
+                                    </p>
+                                {% endif %}
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="5" class="text-right">
+                                <a href="{% url 'products' %}" class="btn btn-light rounded-0 btn-lg">
+                                    <span class="icon text-black">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span class="text-uppercase">Keep Shopping</span>
+                                </a>
+                                <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
+                                    <span class="text-uppercase">Secure Checkout</span>
+                                    <span class="icon">
+                                        <i class="fas fa-lock"></i>
+                                    </span>
+                                </a>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
             {% else %}
                 <p class="lead mb-5">Your have no items selected.</p>
                 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
