--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -57,7 +57,7 @@
                                     </span>
                                     <span class="text-uppercase">Return To Collections</span>
                                 </a>
-                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5"  value="Add To Your Collection &#10162;">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
