large int/float bug error not fixed

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -115,3 +115,12 @@ a.category-badge > span.badge:hover {
         height: calc(100vh - 116px);
     }
 }
+
+
+/*-------------added at end for aesthetic upgrade*/
+
+.product-shipping {
+    color: grey;
+    font-weight: 200;
+}
+
