--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -24,7 +24,7 @@
         <div class="col">
             {% if bag_items %}
                 <div class="table-responsive rounded"></div>
-                    <table class="table table-sm table-borderless">
+                    <!-- <table class="table table-sm table-borderless">
                         <thead class="text-black">
                             <tr>
                                 <th scope="col">Product:</th>
@@ -43,10 +43,7 @@
                                 <td class="py-3">
                                     <p class="my-0"><strong>{{ item.product.name }}</strong></p>
                                     {% if item.product.availability == True %}
-                                        <p class="font-small"><span class="in-stock"><i class="fas fa-dot-circle"></i> In Stock </span>|<span class="product-shipping"> Standard shipping 3-5 days</span></p>
-                                    {% else %}
-                                        <p class="font-small"><span class="out-stock"><i class="far fa-dot-circle"></i> Out of Stock </span>|<span class="product-shipping"> Ships in 1-2 weeks</span></p>
-                                    {% endif %}
+                                        <p class="font-small"><span class="in-stock">In Stock </span>|<span class="product-shipping"> Standard shipping 3-5 days</span></p>
                                     <p class="my-0 small text-muted">ID: {{ item.product.product_id }}</p>
                                 </td>
                                 <td class="py-3 d-none d-sm-block">
@@ -116,7 +113,7 @@
                                 </a>
                             </td>
                         </tr>
-                    </table>
+                    </table>                     -->
                 </div>
             {% else %}
                 <p class="lead mb-5">Your have no items selected.</p>
