--- a/static/css/base.css
+++ b/static/css/base.css
@@ -82,6 +82,11 @@ a.category-badge > span.badge:hover {
     color: #fff !important;
 }
 
+.update-link,
+.remove-item {
+    cursor: pointer;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
