added toast sucess message with link and css

--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -6,5 +6,13 @@
     </div>
     <div class="toast-body text-black">
         {{ message }}        
+        <div class="bag-notification-wrapper">
+        <a href="{% url 'view_bag' %}" class="btn btn-black btn-block rounded-0">
+            <span class="text-uppercase">Go To Secure Checkout</span>
+            <span class="icon">
+                <i class="fas fa-lock"></i>
+            </span>
+        </a>
+        </div>
     </div>
 </div>
