--- a/checkout/templates/checkout/chckout_success.html
+++ b/checkout/templates/checkout/chckout_success.html
@@ -19,9 +19,9 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4">Thank You</h2>
+                <h2 class="logo-font mb-4">Thank You!</h2>
                 <hr>
-                <p class="text-black">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
+                <p class="text-black">Your order information is below. A confirmation email has been sent to <strong>{{ order.email }}</strong>.</p>
             </div>
         </div>
 
@@ -34,7 +34,7 @@
 					<span class="icon mr-2">
 						<i class="fas fa-gifts"></i>
 					</span>
-					<span class="text-uppercase">Now check out the latest deals!</span>
+					<span class="text-uppercase">Check back for our new upcoming collections!</span>
 				</a>
 			</div>
 		</div>
