--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -3,16 +3,11 @@
     <div class="w-100 toast-capper bg-success"></div>
     <div class="toast-header bg-white text-dark">
         <strong class="mr-auto">Success!</strong>
+        <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
     </div>
     <div class="toast-body text-black">
         {{ message }}        
-        <div class="bag-notification-wrapper">
-        <a href="{% url 'view_bag' %}" class="btn btn-black btn-block rounded-0">
-            <span class="text-uppercase">Go To Secure Checkout</span>
-            <span class="icon">
-                <i class="fas fa-lock"></i>
-            </span>
-        </a>
-        </div>
     </div>
 </div>
