presaves buyers card information and preloads

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -21,7 +21,7 @@
                 <hr>
                 <h2 class="logo-font mb-4">Thank You!</h2>
                 <hr>
-                <p class="text-black">Your order information is below. A confirmation email has been sent to <strong>{{ order.email }}</strong>.</p>
+                <p class="text-black">Your Reservation information is below. A confirmation email has been sent to <strong>{{ order.email }}</strong>.</p>
             </div>
         </div>
 
@@ -204,7 +204,7 @@
                         <span class="icon mr-2">
                             <i class="fas fa-house"></i>
                         </span>
-                        <span class="text-uppercase">Lets head back!</span>
+                        <span class="text-uppercase">Return to view collections</span>
                     </a>
                 {% endif %}
 			</div>
