--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -20,6 +20,7 @@
             <div class="col ">
                 
                 <h2 class=" mb-4">My Profile</h2>
+                <h4 class=" mb-4"> Welcome {{ user }} </h4>
                 
             </div>
         </div>
