--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -50,7 +50,7 @@
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card h-100 border-0">
                                 <a href="{% url 'product_detail' product.id %}">
-                                    <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                    <img class="card-img-top img-fluid size" src="{{ product.image.url }}" alt="{{ product.name }}">
                                 </a>
                                 <div class="card-body pb-0">
                                     <p class="mb-0">{{ product.name }}</p>
