--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -11,12 +11,12 @@
 {% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
+<div class="overlay backcolor"></div>
 <div class="container mb-2">
     <div class="row">
         <div class="col">
             <hr>
-            <h2 class="logo-font mb-4">Your Reserved Items</h2>
+            <h2 class="logo-font mb-4 text-color">Your Reserved Items</h2>
             <hr>
         </div>
     </div>
@@ -45,7 +45,7 @@
                                     <p class="my-0"><strong>{{ item.product.name }}</strong></p>
                                 </td>
                                 <td class="py-3">
-                                    <p class="my-0">${{ item.product.price }}</p>
+                                    <p class="my-0">€{{ item.product.price }}</p>
                                 </td>
                                 <td class="py-3 w-25">
                                     <form class="form update-form" method="POST" action="{% url 'edit_bag' item.item_id %}">
@@ -61,7 +61,7 @@
                                                     </button>
                                                 </div>
                                                 <input class="form-control form-control-sm qty_input" type="number"
-                                                    name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                                                    name="quantity" value="{{ item.quantity }}" min="1" max="9"
                                                     data-item_id="{{ item.item_id }}"
                                                     id="id_qty_{{ item.item_id }}">
                                                 <div class="input-group-append">
@@ -75,22 +75,22 @@
                                             </div>
                                         </div>
                                     </form>
-                                    <a class="update-link text-info no-text-dec"><small>Update</small></a>
+                                    <a class="update-link text-inform no-text-dec"><small>Update</small></a>
                                     <a class="remove-item text-danger float-right no-text-dec" id="remove_{{ item.item_id }}" data-size="{{ item.size }}"><small>Remove</small></a>
                                 </td>
                                 <td class="py-3">
-                                    <p class="my-0">${{ item.product.price | calc_subtotal:item.quantity }}</p>
+                                    <p class="my-0">€{{ item.product.price | calc_subtotal:item.quantity }}</p>
                                 </td>
                             </tr>
                         {% endfor %}
                         <tr>
                             <td colspan="5" class="pt-5 text-right">
-                                <h6><strong>Bag Total: ${{ total|floatformat:2 }}</strong></h6>
-                                <h6>Delivery: ${{ delivery|floatformat:2 }}</h6>
-                                <h4 class="mt-4"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
+                                <h6><strong>Bag Total: €{{ total|floatformat:2 }}</strong></h6>
+                                <h6>Delivery: €{{ delivery|floatformat:2 }}</h6>
+                                <h4 class="mt-4"><strong>Grand Total: €{{ grand_total|floatformat:2 }}</strong></h4>
                                 {% if free_delivery_delta > 0 %}
-                                    <p class="mb-1 text-danger">
-                                        You could get free delivery by spending just <strong>${{ free_delivery_delta }}</strong> more!
+                                    <p class="mb-1 text-inform">
+                                        You could get free delivery by spending just <strong>€{{ free_delivery_delta }}</strong> more!
                                     </p>
                                 {% endif %}
                             </td>
@@ -114,7 +114,7 @@
                     </table>                    
                 </div>
             {% else %}
-                <p class="lead mb-5">Your have no items selected.</p>
+                <p class="lead mb-5 text-color">Your have no items selected.</p>
                 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
                     <span class="icon">
                         <i class="fas fa-chevron-left"></i>
