--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -14,29 +14,29 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
+    <div class="overlay backcolor"></div>
     <div class="container products-page">
         <div class="row padding-top">
             <div class="col ">
                 
                 <h2 class=" mb-4">My Profile</h2>
-                <h4 class=" mb-4"> Welcome {{ user }} </h4>
+                <h4 class=" mb-4 mt-2"> Welcome {{ user }} </h4>
                 
             </div>
         </div>
         <div class="row profile-page">
             <div class="col-12 col-lg-6">
-                <p class="text-muted">Default Delivery Information</p>
+                <p class="text-muted text-color">Default Delivery Information</p>
                 <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button class="btn btn-black rounded-0 text-uppercase my-2 float-right">Update Information</button>
+                    <button class="btn btn-black rounded-0 text-uppercase my-2 float-right text-color">Update Information</button>
                 </form>
             </div>
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Order History</p>
                 <div class="order-history table-responsive">
-                    <table class="table table-sm table-borderless">
+                    <table class="table table-sm table-borderless text-color">
                         <thead>
                             <tr>
                                 <th>Order Number</th>
