--- a/templates/base.html
+++ b/templates/base.html
@@ -143,4 +143,55 @@
 
     
   </body>
+  <footer>
+    <div class="info-container h-50">
+      <div class="row h-100">
+          <div class="col-12 col-md-6 info-style">
+              <h3 class="info-title">
+                  Who we are?
+              </h3>
+              <p>
+                  The team at EXECUStore is a dedicated team of perfectionisits that tailor to modern tastes  
+                  We established EXECUStore in 2013 when a combined love for fashion and timepieces.
+                  We are determined to create a platform that can make it easy for our loyal custormers to get exactly what they want.
+              </p>
+              <h3 class="info-title"> 
+                  Where to find us
+              </h3>
+              <p>
+                  Republic Street <br>
+                  Valetta <br>
+                  Malta<br>
+              </p>
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="team-photo">
+                <img src="{{ MEDIA_URL }}footer.jpg" class="img-fluid" alt="team photo">
+            </div>
+        </div>
+      </div>
+  </div>
+    <div class="container-fluid footer-style">
+      <div class="row">
+        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+          <a href="{% url 'home' %}" class="nav-link footer-logo-link text-black">
+            <h2 class="logo-font my-0">EXECUStore<strong>.</strong></h2>
+          </a>
+        </div>
+        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+          <ul class="list-inline list-unstyled text-center text-lg my-0">
+            <li class="list-inline-item"><a class="footer-icon" href="https://www.instagram.com/"><i class="fab fa-lg fa-instagram"></i></a></li>
+            <li class="list-inline-item"></li>
+            <li class="list-inline-item"><a class="footer-icon" href="https://www.facebook.com/"><i class="fab fa-lg fa-facebook-f"></i></a></li>
+            <li class="list-inline-item"></li>
+            <li class="list-inline-item"><a class="footer-icon" href="https://www.twitter.com/"><i class="fab fa-lg fa-twitter"></i></a></li>
+          </ul>
+        </div>
+        
+        <div class="col-12 col-lg-4 text-black my-auto py-1 py-lg-0 text-lg-right footer-centre">
+          © BLUE Design
+        </div>
+      </div>
+    </div>
+  </footer>
 </html>
