--- a/templates/base.html
+++ b/templates/base.html
@@ -144,7 +144,7 @@
     
   </body>
   <footer>
-    <div class="info-container h-50">
+    <div class="info-container h-50 footer-height">
       <div class="row h-100">
           <div class="col-12 col-md-6 info-style">
               <h3 class="info-title">
@@ -156,12 +156,13 @@
                   We are determined to create a platform that can make it easy for our loyal custormers to get exactly what they want.
               </p>
               <h3 class="info-title"> 
-                  Where to find us
+                  Get in touch
               </h3>
               <p>
                   Republic Street <br>
                   Valetta <br>
                   Malta<br>
+                  +353 102333421
               </p>
           </div>
           <div class="col-12 col-md-6">
@@ -174,8 +175,8 @@
     <div class="container-fluid footer-style">
       <div class="row">
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-          <a href="{% url 'home' %}" class="nav-link footer-logo-link text-black">
-            <h2 class="logo-font my-0">EXECUStore<strong>.</strong></h2>
+          <a href="{% url 'home' %}" class="nav-link footer-logo-link text-color">
+            <h2 class="logo-font my-0">EXECUStore</h2>
           </a>
         </div>
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
