--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -4,6 +4,7 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
+<div class="display">
     <hr>
     <h2 class="logo-font mb-4">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
     <hr>
@@ -24,3 +25,4 @@
         {% endif %}
     {% endif %}
 {% endblock %}
+</div>
