--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
 
     {% block meta %}
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -37,8 +37,8 @@
     {% endblock %}
 
     <title>ExecuStore {% block extra_title %}{% endblock %}</title>
-  </head>
-  <body>
+</head>
+<body>
     <header class="container-fluid fixed-top nav-header">
         <div id="topnav" class="row pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
@@ -141,9 +141,7 @@
     </script>
     {% endblock %}
 
-    
-  </body>
-  <footer>
+<footer>
     <div class="info-container h-50 footer-height">
       <div class="row h-100">
           <div class="col-12 col-md-6 info-style">
@@ -159,9 +157,9 @@
                   Get in touch
               </h3>
               <p>
-                  Republic Street <br>
-                  Valetta <br>
-                  Malta<br>
+                  Republic Street, <br>
+                  Valetta, <br>
+                  Malta.<br>
                   +353 102333421
               </p>
           </div>
@@ -194,5 +192,6 @@
         </div>
       </div>
     </div>
-  </footer>
+</footer>   
+</body>
 </html>
