--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -15,8 +15,8 @@
 
 {% block content %}
     <div class="overlay backcolor"></div>
-    <div class="container products-page">
-        <div class="row padding-top">
+    <div class="container mb-2">
+        <div class="row">
             <div class="col ">
                 
                 <h2 class=" mb-4">My Profile</h2>
@@ -24,13 +24,13 @@
                 
             </div>
         </div>
-        <div class="row profile-page">
+        <div class="row">
             <div class="col-12 col-lg-6">
                 <p class="text-muted text-color">Default Delivery Information</p>
                 <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button class="btn btn-black rounded-0 text-uppercase my-2 float-right text-color">Update Information</button>
+                    <button class="btn btn-black rounded-0 text-uppercase my-2 float-right text-success">Update Information</button>
                 </form>
             </div>
             <div class="col-12 col-lg-6">
@@ -64,15 +64,15 @@
                                             {% endfor %}
                                         </ul>
                                     </td>
-                                    <td>${{ order.grand_total }}</td>
+                                    <td>#{{ order.grand_total }}</td>
                                 </tr>
                             {% endfor %}
                         </tbody>
                     </table>
                 </div>
             </div>
-            <div class="h-50"></div>
         </div>
+    </div>
 {% endblock %}
 
 {% block postloadjs %}
