--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,6 +5,7 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block inner_content %}
+<div class="display">
 <hr>
 <h2 class="logo-font mb-4">{% trans "Sign Out" %}</h2>
 <hr>
@@ -18,6 +19,7 @@
   <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Cancel</a>
   <button type="submit" class="text-danger">{% trans 'Sign Out' %}</button>
 </form>
+</div>
 
 
 {% endblock %}
