--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -5,6 +5,7 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
+<div class="display">
     <hr>
     <h2 class="logo-font mb-4">{% trans "Change Password" %}</h2>
     <hr>
@@ -16,3 +17,4 @@
         <button type="submit" name="action">{% trans "Change Password" %}</button>
     </form>
 {% endblock %}
+</div>
