added footer map

--- a/templates/base.html
+++ b/templates/base.html
@@ -168,6 +168,13 @@
                 <img src="{{ MEDIA_URL }}footer.jpg" class="img-fluid" alt="team photo">
             </div>
         </div>
+        <div class="col-12 col-md-6">
+            <div class="team-photo">
+            <a href="https://www.googlemaps.com/" target="_blank">
+                <img src="{{ MEDIA_URL }}maps.jpg" class="img-fluid" alt="map photo">
+            </a>
+            </div>
+        </div>
       </div>
   </div>
     <div class="container-fluid footer-style">
