--- a/templates/base.html
+++ b/templates/base.html
@@ -167,7 +167,7 @@
             <div class="team-photo">
                 <img src="{{ MEDIA_URL }}footer.jpg" class="img-fluid" alt="team photo">
             </div>
-            <div class="team-photo">
+            <div>
             <a href="https://www.googlemaps.com/" target="_blank">
                 <img src="{{ MEDIA_URL }}maps.jpg" class="img-fluid" alt="map photo">
             </a>
