--- a/templates/base.html
+++ b/templates/base.html
@@ -165,13 +165,13 @@
           </div>
         <div class="col-12 col-md-6">
             <div class="team-photo">
-                <img src="{{ MEDIA_URL }}footer.jpg" class="img-fluid" alt="team photo">
+                <img src="{{ MEDIA_URL }}footer.jpg" class="img-fluid map-photo" alt="team photo">
             <a href="https://www.googlemaps.com/" target="_blank">
                 <img src="{{ MEDIA_URL }}maps.jpg" class="img-fluid" alt="map photo">
             </a>
+            </div>
         </div>
       </div>
-  </div>
     <div class="container-fluid footer-style">
       <div class="row">
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
@@ -193,6 +193,7 @@
           © BLUE Design
         </div>
       </div>
+    </div>
     </div>
 </footer>   
 </body>
