--- a/templates/base.html
+++ b/templates/base.html
@@ -142,7 +142,7 @@
     {% endblock %}
 
 <footer>
-    <div class="info-container h-50 footer-height">
+    <div class="info-container h-50">
       <div class="row h-100">
           <div class="col-12 col-md-6 info-style">
               <h3 class="info-title">
