changed email confirmation

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -345,10 +345,10 @@ footer{
 }
 
 .team-photo {
-    padding: 6rem;
+    padding: 4rem;
     align-items: center;
 }
 
 .map-photo{
-    padding: 2rem;
+    padding-top: 2rem;
 }
