fixed screeen size bug

--- a/templates/base.html
+++ b/templates/base.html
@@ -96,7 +96,7 @@
                 </ul>
             </div>
         </div>
-        <div class="row bg-white">
+        <div class="row">
             <nav class="navbar navbar-expand-lg navbar-color w-100">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa-solid fa-bars"></i>
@@ -149,9 +149,9 @@
                   Who we are?
               </h3>
               <p>
-                  The team at EXECUStore is a dedicated team of perfectionisits that tailor to modern tastes  
+                  The team at EXECUStore is a dedicated team of perfectionists that tailor to modern tastes  
                   We established EXECUStore in 2013 when a combined love for fashion and timepieces.
-                  We are determined to create a platform that can make it easy for our loyal custormers to get exactly what they want.
+                  We are determined to create a platform that can make it easy for our loyal customers to get exactly what they want.
               </p>
               <h3 class="info-title"> 
                   Get in touch
@@ -166,6 +166,7 @@
         <div class="col-12 col-md-6">
             <div class="team-photo">
                 <img src="{{ MEDIA_URL }}footer.jpg" class="img-fluid map-photo" alt="team photo">
+        <br>
             <a href="https://www.googlemaps.com/" target="_blank">
                 <img src="{{ MEDIA_URL }}maps.jpg" class="img-fluid" alt="map photo">
             </a>
