500 error with quantity form

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -209,7 +209,7 @@ input[name='q']::placeholder {
 }
 
 .allauth-form-inner-content a {
-	color: #17a2b8; /* text-info */
+	color: #003D7A; /* text-info */
 }
 
 
