--- a/bag/templates/bag/quantity-form.html
+++ b/bag/templates/bag/quantity-form.html
@@ -1,4 +1,4 @@
-<form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
+<form class="form update-form" method="POST" action="{% url 'edit_bag' item.item_id %}">
     {% csrf_token %}
     <div class="form-group">
         <div class="input-group">
@@ -11,7 +11,7 @@
                 </button>
             </div>
             <input class="form-control form-control-sm qty_input" type="number"
-                name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                name="quantity" value="{{ item.quantity }}" min="1" max="9"
                 data-item_id="{{ item.item_id }}"
                 id="id_qty_{{ item.item_id }}">
             <div class="input-group-append">
@@ -22,11 +22,8 @@
                     </span>
                 </button>
             </div>
-            {% if item.product.has_sizes %}
-                <input type="hidden" name="product_size" value="{{ item.size }}">
-            {% endif %}
         </div>
     </div>
 </form>
-<a class="update-link text-info"><small>Update</small></a>
-<a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
+<a class="update-link text-inform no-text-dec"><small>Update</small></a>
+<a class="remove-item text-danger float-right no-text-dec" id="remove_{{ item.item_id }}" data-size="{{ item.size }}"><small>Remove</small></a>
