--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
                     <li class="list-inline-item">
                         <a class="{% if grand_total %}text-inform font-weight-bold{% else %}text-inform{% endif %} nav-link" href="{% url 'view_bag' %}">
                             <div class="text-center">
-                                <div><i class="fas fa-cash-register fa-lg"></i></div>
+                                <div><i class="fas fa-cash-register fa-lg icon1"></i></div>
                                 <p class="my-0">
                                     {% if grand_total %}
                                         €{{ grand_total|floatformat:2 }}
