--- a/templates/base.html
+++ b/templates/base.html
@@ -107,7 +107,7 @@
         </div>
         <div id="delivery-banner" class="row text-center">
             <div class="col bg-color-dark text-color">
-                <h4 class="logo-font my-1">Free delivery over €{{ free_delivery_threshold }}</h4>                
+                <h4 class="logo-font">Free delivery over €{{ free_delivery_threshold }}</h4>                
             </div>            
         </div>
     </header>
