--- a/templates/base.html
+++ b/templates/base.html
@@ -169,7 +169,6 @@
     <form action="https://herokuapp.us21.list-manage.com/subscribe/post?u=e5c9ce3ed256af45654f3762c&amp;id=3f5825c5d0&amp;f_id=003dd7e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <div id="mc_embed_signup_scroll">
         <h2>Join the EXECUClub</h2>
-        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 <div class="mc-field-group">
 	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
 </label>
@@ -214,7 +213,7 @@
           <ul class="list-inline list-unstyled text-center text-lg my-0">
             <li class="list-inline-item"><a class="footer-icon" href="https://www.instagram.com/"><i class="fab fa-lg fa-instagram"></i></a></li>
             <li class="list-inline-item"></li>
-            <li class="list-inline-item"><a class="footer-icon" href="https://www.facebook.com/"><i class="fab fa-lg fa-facebook-f"></i></a></li>
+            <li class="list-inline-item"><a class="footer-icon" href="https://www.facebook.com/profile.php?id=100088686742068"><i class="fab fa-lg fa-facebook-f"></i></a></li>
             <li class="list-inline-item"></li>
             <li class="list-inline-item"><a class="footer-icon" href="https://www.twitter.com/"><i class="fab fa-lg fa-twitter"></i></a></li>
           </ul>
