--- a/templates/base.html
+++ b/templates/base.html
@@ -189,16 +189,19 @@
     </div>
 </form>
 </div>
-<!--End mc_embed_signup-->
               </p>
           </div>
+<!--End mc_embed_signup-->
         <div class="col-12 col-md-6">
             <div class="team-photo">
-                <img src="{{ MEDIA_URL }}footer.jpg" class="img-fluid map-photo" alt="team photo">
+                <img src="{{ MEDIA_URL }}footer.jpg" class="img-fluid team-photo" alt="team photo">
         <br>
             <a href="https://www.googlemaps.com/" target="_blank">
                 <img src="{{ MEDIA_URL }}maps.jpg" class="img-fluid" alt="map photo">
             </a>
+            </div>
+            <div class="col-12 col-md-6" id="privacy">
+                <a href="https://www.privacypolicygenerator.info/live.php?token=8mDsx73k4UpV0Iv3SMkq8C7KnSp67knw" target="_blank" class="text-inform">Privacy Policy</a>
             </div>
         </div>
       </div>
