css and typo correctsions

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -262,7 +262,7 @@ input[name='q']::placeholder {
     }
 
     #delivery-banner h4 {
-        font-size: .9rem;
+        font-size: 1.1rem;
     }
 
     .btn.btn-outline-black.rounded-0,
