--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,7 @@
         <div class="row">
             <nav class="navbar navbar-expand-lg navbar-color w-100">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fa-solid fa-bars"></i>
+                    <i class="fa-solid fa-bars icon1"></i>
                 </button>
                 {% include 'includes/mobile-top-header.html' %}
                 {% include 'includes/main-nav.html' %}
@@ -152,8 +152,8 @@
                   Who we are?
               </h3>
               <p>
-                  The team at EXECUStore is a dedicated team of perfectionists that tailor to modern tastes  
-                  We established EXECUStore in 2013 when a combined love for fashion and timepieces.
+                  The team at EXECUStore is a dedicated team of perfectionists, that tailor to modern tastes.  
+                  We established EXECUStore in 2013 with a combined love for fashion and timepieces.
                   We are determined to create a platform that can make it easy for our loyal customers to get exactly what they want.
               </p>
               <h3 class="info-title"> 
