--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -40,12 +40,12 @@
 <li class="list-inline-item">
     <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_bag' %}">
         <div class="text-center">
-            <div><i class="fas fa-cash-register fa-lg"></i></div>
-            <p class="my-0">
+            <div><i class="fas fa-cash-register fa-lg icon1"></i></div>
+            <p class="my-0 text-inform">
                 {% if grand_total %}
-                    ${{ grand_total|floatformat:2 }}
+                    €{{ grand_total|floatformat:2 }}
                 {% else %}
-                    $0.00
+                    €0.00
                 {% endif %}
             </p>
         </div>
