--- a/templates/base.html
+++ b/templates/base.html
@@ -196,7 +196,7 @@
             <div class="team-photo">
                 <img src="{{ MEDIA_URL }}footer.jpg" class="img-fluid team-photo" alt="team photo">
         <br>
-            <a href="https://www.googlemaps.com/" target="_blank">
+            <a href="https://www.google.com/maps/d/u/0/viewer?msa=0&ie=UTF8&t=m&ll=35.897463%2C14.512553000000018&spn=0.006084%2C0.00912&z=16&source=embed&mid=1gkWijM7EdiQS33CqDIk2CGUZneU" target="_blank">
                 <img src="{{ MEDIA_URL }}maps.jpg" class="img-fluid" alt="map photo">
             </a>
             </div>
