fixed add product server 500 error and backgorund issue

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     {% block extra_js %}
     {% endblock %}
 
-    <title>Kafe Analog {% block extra_title %}{% endblock %}</title>
+    <title>EXECUStore {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
       <header class="container-fluid fixed-top nav-header">
