--- a/static/css/base.css
+++ b/static/css/base.css
@@ -44,6 +44,13 @@ body {
     border: 1px solid black;
 }
 
+.btn-outline-green {
+    background: white;
+    color: black !important; /* use important to override link colors for <a> elements */
+    border: 1px solid green;
+    max-width: fit-content;
+}
+
 .shop-now-button:hover,
 .shop-now-button:active,
 .shop-now-button:focus,
@@ -288,6 +295,7 @@ input[name='q']::placeholder {
 .product-page {
     color: black;
     padding-top: 3.5rem;
+    padding-bottom: .5rem;
 }
 
 .product-shipping {
@@ -423,4 +431,8 @@ footer{
 
 .blog-row {
     padding-top: 15px;
+}
+
+.space{
+    padding-bottom: 1rem;
 }
