--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,18 +10,52 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
-        <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 text-white">
-                    The new Executive 2023 Collection
-                </h1>
-                <div class="my-5">
-                    <h4>
-                        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3 text-color bg-color-dark">Browse Collection</a>
-                    </h4>
-                </div>
-            </div>
-        </div>
+
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="{{ MEDIA_URL }}homepage-image.jpg" class="landing-image d-block w-100" alt="watch with suit">
+        <div class="carousel-caption ">
+          <h4>Shop our latest Collections</h4>
+          <p>Find our collection of Watches<a href="{% url 'products' %}?category=watches" class="landing-link"> here!</a></p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="{{ MEDIA_URL }}club.webp" class="landing-image d-block w-100" alt="welcome blog post">
+        <div class="carousel-caption text-black ">
+            <h4>Join the EXECUClub</h4>
+            <p>Keep up with newest trends and latest drops<a href="{% url 'blog' %}" class="landing-link"> here!</a></p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="{{ MEDIA_URL }}suit4.jpg" class="landing-image d-block w-100" alt="mens formal dark suit">
+        <div class="carousel-caption ">
+            <h4>Browse our latest suit collections</h4>
+            <p>Find our tailor made suits<a href="{% url 'products' %}?category=coffee" class="landing-link"> here!</a></p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+    
 {% endblock %}
+
+<script>
+    var myCarousel = document.querySelector('#myCarousel')
+    var carousel = new bootstrap.Carousel(myCarousel, {
+    interval: 2000,
+    wrap: false
+    })
+</script>
