fixed media query and shopping bag price

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 <div class="overlay backcolor"></div>
-<div class="container mb-2">
+<div class="container mb-2 display">
     <div class="row">
         <div class="col">
             <hr>
