added appropriate rel tags and ameneded the readme for deploying

--- a/templates/base.html
+++ b/templates/base.html
@@ -301,7 +301,7 @@
                   +353 102333421
                   <!-- Begin Mailchimp Signup Form -->
 <div id="mc_embed_signup">
-    <form action="https://herokuapp.us21.list-manage.com/subscribe/post?u=e5c9ce3ed256af45654f3762c&amp;id=3f5825c5d0&amp;f_id=003dd7e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <form action="https://herokuapp.us21.list-manage.com/subscribe/post?u=e5c9ce3ed256af45654f3762c&amp;id=3f5825c5d0&amp;f_id=003dd7e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate rel="noopener">
         <div id="mc_embed_signup_scroll">
         <h2>Join the EXECUClub</h2>
 <div class="mc-field-group">
@@ -331,12 +331,12 @@
             <div class="team-photo">
                 <img src="{{ MEDIA_URL }}footer.jpg" class="img-fluid team-photo" alt="team photo">
         <br>
-            <a href="https://www.google.com/maps/d/u/0/viewer?msa=0&ie=UTF8&t=m&ll=35.897463%2C14.512553000000018&spn=0.006084%2C0.00912&z=16&source=embed&mid=1gkWijM7EdiQS33CqDIk2CGUZneU" target="_blank">
+            <a href="https://www.google.com/maps/d/u/0/viewer?msa=0&ie=UTF8&t=m&ll=35.897463%2C14.512553000000018&spn=0.006084%2C0.00912&z=16&source=embed&mid=1gkWijM7EdiQS33CqDIk2CGUZneU" target="_blank" rel="opener">
                 <img src="{{ MEDIA_URL }}maps.jpg" class="img-fluid" alt="map photo">
             </a>
             </div>
             <div class="col-12 col-md-6" id="privacy">
-                <a href="https://www.privacypolicygenerator.info/live.php?token=8mDsx73k4UpV0Iv3SMkq8C7KnSp67knw" target="_blank" class="text-inform">Privacy Policy</a>
+                <a href="https://www.privacypolicygenerator.info/live.php?token=8mDsx73k4UpV0Iv3SMkq8C7KnSp67knw" target="_blank" rel="opener" class="text-inform">Privacy Policy</a>
             </div>
         </div>
       </div>
@@ -349,11 +349,11 @@
         </div>
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
           <ul class="list-inline list-unstyled text-center text-lg my-0">
-            <li class="list-inline-item"><a class="footer-icon" href="https://www.instagram.com/"><i class="fab fa-lg fa-instagram"></i></a></li>
+            <li class="list-inline-item"><a class="footer-icon" href="https://www.instagram.com/" target="_blank" rel="opener"><i class="fab fa-lg fa-instagram"></i></a></li>
             <li class="list-inline-item"></li>
-            <li class="list-inline-item"><a class="footer-icon" href="https://www.facebook.com/profile.php?id=100088686742068"><i class="fab fa-lg fa-facebook-f"></i></a></li>
+            <li class="list-inline-item"><a class="footer-icon" href="https://www.facebook.com/profile.php?id=100088686742068" target="_blank" rel="opener"><i class="fab fa-lg fa-facebook-f"></i></a></li>
             <li class="list-inline-item"></li>
-            <li class="list-inline-item"><a class="footer-icon" href="https://www.twitter.com/"><i class="fab fa-lg fa-twitter"></i></a></li>
+            <li class="list-inline-item"><a class="footer-icon" href="https://www.twitter.com/" target="_blank" rel="opener"><i class="fab fa-lg fa-twitter"></i></a></li>
           </ul>
         </div>
         
