fixed text in second photo fro overlapping

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,20 +20,20 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="{{ MEDIA_URL }}homepage-image.jpg" class="landing-image d-block w-100" alt="watch with suit">
-        <div class="carousel-caption ">
+        <div class="carousel-caption carousel-text ">
           <h4>Shop our latest Collections</h4>
           <p>Find our collection of Watches<a href="{% url 'products' %}?category=watches" class="landing-link"> here!</a></p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="{{ MEDIA_URL }}club.webp" class="landing-image d-block w-100" alt="welcome blog post">
-        <div class="carousel-caption text-black ">
+        <div class="carousel-caption text-down text-black ">
             <p>Keep up with newest trends and latest drops<a href="{% url 'blog' %}" class="landing-link"> here!</a></p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="{{ MEDIA_URL }}suit4.jpg" class="landing-image d-block w-100" alt="mens formal dark suit">
-        <div class="carousel-caption ">
+        <div class="carousel-caption carousel-text">
             <h4>Browse our latest suit collections</h4>
             <p>Find our tailor made suits<a href="{% url 'products' %}?category=coffee" class="landing-link"> here!</a></p>
         </div>
